--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
 			</header>
 
 			<div class="resultado">
-				<div class="spinner"></div>
-				<p class="resultado__text">Esta es una prueba de reconocimiento de voz</p>
+				<div class="spinner" id="spinner">
+					<div class="bounce1"></div>
+					<div class="bounce2"></div>
+					<div class="bounce3"></div>
+				</div>
+				<p class="resultado__text" id="resultado">Bienvenido a Speech JS</p>
 			</div>
 
-			<div class="boton">
+			<div class="boton" id="boton">
 				<div class="boton__circle">
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
 						<path
@@ -35,5 +39,7 @@
 				</div>
 			</div>
 		</div>
+
+		<script src="js/app.js"></script>
 	</body>
 </html>
