Carpeta docs eliminada y enlace a github agregado

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="main">
 			<header class="header">
 				<h1 class="header__title">Speech JS</h1>
-				<span class="header__powered">by Nerix</span>
+				<a href="https://github.com/nerixdream/speechJS" class="header__powered" target="_blank">by Nerix</a>
 			</header>
 
 			<div class="resultado">
