--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</div>
 
 			<div class="boton" id="boton">
-				<div class="boton__circle">
+				<button class="boton__circle">
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
 						<path
 							fill-rule="evenodd"
@@ -36,7 +36,7 @@
 							clip-rule="evenodd"
 						/>
 					</svg>
-				</div>
+				</button>
 			</div>
 		</div>
 
